backout from virtual threads as well